# finances-dashboard

./: .gitignore  Dockerfile  README.md  analysis.ipynb  app.py  auth.py  budget_progress_bars.py  config.py  dashboard.py  datafetchers.py  docker-compose.yml  main.py  overrides_helpers.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
templates/: index.html  login.html
