[project]
name = "finances-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.3",
    "flask>=3.1.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "plaid-python==7.1.0",
]
